Fix tips and tricks, terms of use, make site better on mobile

--- a/docs/src/_sass/_main.scss
+++ b/docs/src/_sass/_main.scss
@@ -208,6 +208,11 @@ nav .ref-title {
   width: 50vw;
   margin-left: 400px;
 
+  @media #{mobile} {
+    width: 100vw;
+    margin-left: 0px;
+  }
+
   // ??
   .lang-wrapper {
     display: table;
@@ -284,7 +289,7 @@ div.container > .methods {
 .method {
   display: table;
   width: 100%;
-  height: 100%;
+
 
   .description, .example {
     width: 50%;
